# pdum_criu

./: .gitignore  AGENTS.md  README.md  data.json  demo_goblin_sync.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
demos/: goblin_freeze_thaw_freeze.py  goblin_thaw_timing.py
docs/: freeze-thaw-freeze.md  goblins.ipynb
docs/docs/_goblin_runs/freeze-1762546506205/: .pdum_goblin_meta.json  core-348065.img  files.img  inventory.img  mm-348065.img  pagemap-348065.img  pages-1.img  pipes-data.img  pstree.img  stats-dump  stats-restore  timens-0.img
docs/docs/_goblin_runs/freeze-1762546606298/: .pdum_goblin_meta.json  core-349835.img  fdinfo-2.img  files.img  fs-349835.img  inventory.img  mm-349835.img  pagemap-349835.img  pages-1.img  pipes-data.img  pstree.img  stats-dump  stats-restore  timens-0.img
example/: pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_63b19a039cbe368c___init___py.html  z_63b19a039cbe368c_cli_py.html  z_63b19a039cbe368c_utils_py.html  z_d88ad75c6ba3f2e4___init___py.html
scripts/: coverage.sh
src/pdum/criu/: __init__.py  cli.py  utils.py
src/pdum/criu/goblins/: __init__.py  sketch.py
tests/: test_cli.py  test_goblins.py  test_live_cli.py  test_live_criu.py  test_live_criu_async.py  test_utils.py
