[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "habemus-papadum-criu",
]

[tool.uv.sources]
habemus-papadum-criu = { path = "../", editable = true }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
